--- a/dbflute.net-backstage/resource/ja/environment/newest.html
+++ b/dbflute.net-backstage/resource/ja/environment/newest.html
@@ -27,7 +27,13 @@
 	<h2 id="download">最新バージョンのダウンロード</h2>
 	<h3 id="module">DBFluteモジュール</h3>
 	<p>
-		<a href="http://dbflute.net.sandbox.seasar.org/download/dbflute/dbflute-0.8.9.57.zip">dbflute-s.zip</a>
+		<a href="http://dbflute.net.sandbox.seasar.org/download/dbflute/dbflute-0.8.9.57.zip">dbflute-0.8.9.57.zip</a>
+	</p>
+
+	<h2 id="snapshot">SNAPSHOTバージョンのダウンロード</h2>
+	<h3 id="module">DBFluteモジュール</h3>
+	<p>
+		<a href="http://dbflute.net.sandbox.seasar.org/download/dbflute/dbflute-0.8.9.58.zip">dbflute-0.8.9.57-SNAPSHOT.zip</a>
 	</p>
 <!-- __content-end__ --></div></div>
 
