--- a/dbflute.net-backstage/resource/ja/environment/changelog/index.html
+++ b/dbflute.net-backstage/resource/ja/environment/changelog/index.html
@@ -18,6 +18,28 @@
 	${indexlist}
 
       <div class="release">
+        <h2>DBFlute.NET-0.8.9.59</h2>
+        <p class="releasedate">2014/09/26</p>
+        <div class="new">
+          <h3>NEW</h3>
+          <ul>
+            <li>(DBFLUTE-1159){Java/C#}: additionalForeignKeyやclassificationのdfpropを分割できるように</li>
+            <li>(DBFLUTE-1158){Java/C#}: fixedReferrer(業務的many-to-one)のときにReverseFKが生成されないようにする</li>
+            <li>(DBFLUTE-1157){Java/C#}: fixedConditionの埋め込み区分値で区分値グループを指定できるように</li>
+            <li>(DBFLUTE-1150){Java/C#}: 区分値のgroupingMapで別のgroupを部品として参照できるように</li>
+            <li>(DBFLUTE-1149){Java/C#}: テーブル区分値で数字で始まる要素名でも生成できるように</li>
+            <li>(DBFLUTE-1116){Java/C#}: SchemaHTMLで複合ユニークキーのトップとサブの区別をつけるように</li>
+            <li>(DBFLUTE-1113){Java/C#}: includeQueryMap.dfpropでカラムドリブンでも指定できるように</li>
+            <li>(DBFLUTE-1112){Java/C#}: SchemaSychCheckでCraftDiffを抑制できるオプション</li>
+          </ul>
+        </div>
+        <div class="bug">
+          <h3>BUG</h3>
+          <ul>
+          </ul>
+        </div>
+      </div>
+      <div class="release">
         <h2>DBFlute.NET-0.8.9.58</h2>
         <p class="releasedate">2014/05/16</p>
         <div class="new">
